--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,6 +9,6 @@ Description: Some useful R classes and functions that were useful to my research
 License: GPL 3.0
 Encoding: UTF-8
 LazyData: true
-Imports: tidyverse
-Suggests:
-RoxygenNote: 7.1.1
+Imports: 
+    tidyverse
+    ggtree
