--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,7 +9,6 @@ Description: Some useful R classes and functions that were useful to my research
 License: GPL 3.0
 Encoding: UTF-8
 LazyData: true
-Imports:
+Depends:
 	tidyverse
         ggtree
-
