--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,6 +9,4 @@ Description: Some useful R classes and functions that were useful to my research
 License: GPL 3.0
 Encoding: UTF-8
 LazyData: true
-Depends:
-	tidyverse
-        ggtree
+Depends: tidyverse ggtree
