--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,5 +9,5 @@ Description: Some useful R classes and functions that were useful to my research
 License: GPL 3.0
 Encoding: UTF-8
 LazyData: true
-Depends: tidyverse, ggtree, phytools
+Depends: tidyverse, ggtree, phytools, ggrepel
 
